syntax = "proto3";
package music;


service fan {
    // Request message contains the name to be greeted
    rpc GetMusicLover (GetMusicLoverRequest) returns (MusicLoverReply);

    rpc GetAllMusicLovers (Empty) returns (GetAllMusicLoversReply);

    rpc CreateMusicLover (CreateMusicLoverRequest) returns (MusicLoverReply);
}

message Empty {

}

message GetMusicLoverRequest {
    int32 id = 1;
}

message GetAllMusicLoversReply {
      repeated  MusicLoverReply music_lovers = 1;
}

message CreateMusicLoverRequest {
    string name = 1;
    repeated string favorite_songs = 2;
}


message MusicLoverReply {
    // Reply contains the greeting message
    uint32 id = 1;
    string name = 2;
    repeated string favorite_songs = 3;
    string message = 4;
}